// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in GifExpertApp debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="snk"
      key="snk"
    />
    <GifGrid
      category="one piece"
      key="one piece"
    />
  </ol>
</Fragment>
`;

exports[`Test in GifExpertApp muestra GifExpertApp correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
